# Computer_Grafic_NSTU

lab_work/Kg_Lr1/: Kg_Lr1.sln
lab_work/Kg_Lr1/Kg_Lr1/: Kg_Lr1.cpp  Kg_Lr1.vcxproj  Kg_Lr1.vcxproj.filters
lab_work/Kg_Lr1/Kg_Lr1/ubuntu/: Kg_Lr1.cpp  my_file.cpp
lab_work/Lab1/: .~lock.ЛР1.docx#  Kg_Lr1.1.cpp  Kg_Lr1.cpp  Makefile  MakefileWin  main  main.cpp  prog.cpp  test  test.cpp  ЛР1.docx
lab_work/Lab2/: .~lock.ЛР2-3.docx#  CMakeLists.txt  My_grafcs.cpp  My_grafcs.h  main  main.cpp  ЛР2-3.docx
lab_work/Lab3/: .~lock.ЛР4.docx#  CMakeLists.txt  Makefile  My_grafcs.cpp  My_grafcs.h  main  main.cpp  main_k.cpp  ЛР4.docx
lab_work/Lab4/: .~lock.ЛР5.docx#  CMakeLists.txt  Makefile  My_grafcs.cpp  My_grafcs.h  main  main.cpp  main_k.cpp  ЛР5.docx
lab_work/RGZ/: CMakeLists.txt  main.cpp
lab_work/RGZ01/: CMakeLists.txt  main.cpp
lab_work/c4/3d/: 3d.sln
lab_work/c4/3d/3d/: 3d.csproj  Math.cs  Mesh.cs  Mesh2.txt  Program.cs  Program1.txt  Program2.txt  Program3.txt  Triangle2.txt
lab_work/c4/3d_render/: 3d_render.sln
lab_work/c4/3d_render/3d_render/: 3d_render.csproj  Program.cs
lab_work/c4/H/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Photo3DEditor.csproj  Photo3DEditor.sln
lab_work/c4/H/Models/: Point3D.cs  Triangle.cs
lab_work/c4/H/Services/: DataService.cs  NullToVisibilityConverter.cs  TriangulationService.cs
lab_work/c4/H/Utils/: OpenGLHelper.cs
lab_work/c4/H/Views/: DepthEditorWindow.xaml  DepthEditorWindow.xaml.cs  ImageWindow.xaml  ImageWindow.xaml.cs  OpenGLControl.xaml  OpenGLControl.xaml.cs  Viewer3DWindow.xaml  Viewer3DWindow.xaml.cs
lab_work/c4/Lab1_KSU/: Lab1_KSU.sln
lab_work/c4/Lab1_KSU/Lab1_KSU/: Program.cs  math.cs  mesh.cs
lab_work/c4/Lab2/: Lab2.sln
lab_work/c4/Lab2/Lab2/: Program.cs
lab_work/c4/Lab23/: Lab23.sln
lab_work/c4/Lab23/Lab23/: Program.cs
lab_work/c4/Lab23_KSU/: Lab23_KSU.sln
lab_work/c4/Lab23_KSU/Lab23_KSU/: Program.cs
lab_work/c4/Lab2_KSU/: Lab2_KSU.sln
lab_work/c4/Lab2_KSU/Lab2_KSU/: Program.cs
lab_work/c4/Lab3/: Lab3.sln
lab_work/c4/Lab3/Lab3/: Program.cs
lab_work/c4/Lab3_KSU/: Lab3_KSU.sln
lab_work/c4/OpenGl_Test/: OpenGl_Test.sln
lab_work/c4/OpenGl_Test/OpenGl_Test/: Obj_load.cs  Program.cs
lab_work/c4/RGZ0/: RGZ0.sln
lab_work/c4/RGZ0/RGZ0/: Program.cs  RGZ0.csproj  math.cs  mesh.cs
lab_work/c4/RGZ1/: RGZ1.sln
lab_work/c4/RGZ1/RGZ1/: Program.cs  Program.txt  RGZ1.csproj  math.cs  mesh.cs
lab_work/c4/RGZ2/: RGZ2.sln
lab_work/c4/lab1/: lab1.sln
lab_work/c4_test/test/: test.sln
lab_work/kursovaya1/: CMakeLists.txt  Makefile  My_grafcs.cpp  My_grafcs.h  main  main.cpp
lab_work/kursovaya2/: CMakeLists.txt  Makefile_k  My_grafcs.cpp  My_grafcs.h  main.cpp  main_k.cpp
lab_work/lab2/: BresenhamExp.md  CMakeLists.txt  Makefile  Makefile2  My_grafcs.cpp  My_grafcs.h  main  main.cpp  main2.cpp
mat/: capture.webm
(+43 files in other folders)
